--- a/physics/Makefile
+++ b/physics/Makefile
@@ -9,7 +9,8 @@ SHARE_DIR = ../share
 SHARE_INCLUDE="-I$(SHARE_DIR)"
 
 objects = module_fr_fire_util.o module_fr_fire_phys.o module_fr_fire_core.o \
-	 module_fr_fire_model.o module_fr_fire_driver.o module_fr_fire_util.o
+	 module_fr_fire_model.o module_fr_fire_driver.o module_fr_fire_util.o \
+         module_fr_fire_fuel_moisture_model.o
 
 target: $(objects)
 %.o: %.F
@@ -21,7 +22,7 @@ clean:
 
   # Dependencies
 module_fr_fire_driver.o: module_fr_fire_util.o module_fr_fire_phys.o module_fr_fire_core.o module_fr_fire_model.o \
-	../io/namelist_mod.o ../state/state_mod.o
+	module_fr_fire_fuel_moisture_model.o ../io/namelist_mod.o ../state/state_mod.o
 
 module_fr_fire_model.o: module_fr_fire_core.o module_fr_fire_phys.o module_fr_fire_util.o
 
@@ -29,3 +30,4 @@ module_fr_fire_core.o: module_fr_fire_phys.o module_fr_fire_util.o
 
 module_fr_fire_phys.o: module_fr_fire_util.o ../share/constants_mod.o
 
+module_fr_fire_fuel_moisture_model.o: module_fr_fire_phys.o module_fr_fire_util.o
