--- a/physics/Makefile
+++ b/physics/Makefile
@@ -28,6 +28,6 @@ module_fr_fire_model.o: module_fr_fire_core.o module_fr_fire_phys.o module_fr_fi
 
 module_fr_fire_core.o: module_fr_fire_phys.o module_fr_fire_util.o
 
-module_fr_fire_phys.o: module_fr_fire_util.o ../share/constants_mod.o
+module_fr_fire_phys.o: module_fr_fire_fuel_moisture_model.o module_fr_fire_util.o ../share/constants_mod.o
 
-module_fr_fire_fuel_moisture_model.o: module_fr_fire_phys.o module_fr_fire_util.o
+module_fr_fire_fuel_moisture_model.o: module_fr_fire_util.o
