--- a/physics/Makefile
+++ b/physics/Makefile
@@ -29,7 +29,7 @@ module_fr_fire_model.o: module_fr_fire_core.o module_fr_fire_phys.o module_fr_fi
 module_fr_fire_core.o: module_fr_fire_phys.o module_fr_fire_util.o
 
 module_fr_fire_phys.o: module_fr_fire_fuel_moisture_model.o module_fr_fire_util.o ../share/constants_mod.o \
-        module_fr_fire_fuel_anderson_mod.o
+        module_fr_fire_fuel_anderson_mod.o ../io/namelist_mod.o
 
 module_fr_fire_fuel_moisture_model.o: module_fr_fire_fuel_anderson_mod.o module_fr_fire_util.o
 
