--- a/physics/Makefile
+++ b/physics/Makefile
@@ -10,7 +10,8 @@ SHARE_INCLUDE="-I$(SHARE_DIR)"
 
 objects = module_fr_fire_util.o module_fr_fire_phys.o module_fr_fire_core.o \
 	 module_fr_fire_model.o module_fr_fire_driver.o module_fr_fire_util.o \
-         module_fr_fire_fuel_moisture_model.o module_fr_fire_fuel_anderson_mod.o
+         module_fr_fire_fuel_moisture_model.o module_fr_fire_fuel_anderson_mod.o \
+	ros_wrffire_mod.o
 
 target: $(objects)
 %.o: %.F
@@ -21,18 +22,19 @@ clean:
 	rm -f ./*.o ./*.mod  ./*.f90
 
   # Dependencies
-module_fr_fire_driver.o: module_fr_fire_util.o module_fr_fire_phys.o module_fr_fire_model.o \
+module_fr_fire_driver.o: module_fr_fire_util.o module_fr_fire_model.o ros_wrffire_mod.o \
 	module_fr_fire_fuel_moisture_model.o module_fr_fire_fuel_anderson_mod.o ignition_line_mod.o \
 	../io/namelist_mod.o ../state/state_mod.o
 
 module_fr_fire_model.o: module_fr_fire_core.o module_fr_fire_phys.o module_fr_fire_util.o ignition_line_mod.o
 
-module_fr_fire_core.o: module_fr_fire_phys.o module_fr_fire_util.o ignition_line_mod.o
+module_fr_fire_core.o: module_fr_fire_util.o ignition_line_mod.o ros_wrffire_mod.o ../state/state_mod.o
 
-module_fr_fire_phys.o: module_fr_fire_fuel_moisture_model.o module_fr_fire_util.o ../share/constants_mod.o \
-        module_fr_fire_fuel_anderson_mod.o ../io/namelist_mod.o
+module_fr_fire_phys.o: module_fr_fire_util.o ../state/state_mod.o ../share/constants_mod.o \
+	../io/namelist_mod.o
 
 module_fr_fire_fuel_moisture_model.o: module_fr_fire_fuel_anderson_mod.o module_fr_fire_util.o
 
 ignition_line_mod.o: ../io/namelist_mod.o module_fr_fire_util.o
 
+ros_wrffire_mod.o: ../share/constants_mod.o module_fr_fire_fuel_moisture_model.o module_fr_fire_util.o
