--- a/physics/Makefile
+++ b/physics/Makefile
@@ -34,7 +34,8 @@ module_fr_fire_core.o: module_fr_fire_util.o ignition_line_mod.o ros_wrffire_mod
 module_fr_fire_phys.o: module_fr_fire_util.o ../state/state_mod.o ../share/constants_mod.o \
 	../io/namelist_mod.o
 
-module_fr_fire_fuel_moisture_model.o: module_fr_fire_fuel_anderson_mod.o module_fr_fire_util.o
+module_fr_fire_fuel_moisture_model.o: module_fr_fire_fuel_anderson_mod.o module_fr_fire_util.o  ros_wrffire_mod.o \
+	../share/constants_mod.o ../state/state_mod.o ../io/namelist_mod.o
 
 ignition_line_mod.o: ../io/namelist_mod.o module_fr_fire_util.o
 
