--- a/physics/Makefile
+++ b/physics/Makefile
@@ -27,7 +27,7 @@ module_fr_fire_driver.o: module_fr_fire_util.o module_fr_fire_model.o ros_wrffir
 	../io/namelist_mod.o ../state/state_mod.o
 
 module_fr_fire_model.o: module_fr_fire_core.o module_fr_fire_phys.o module_fr_fire_util.o ignition_line_mod.o \
-	ros_wrffire_mod.o
+	ros_wrffire_mod.o ../state/state_mod.o ../io/namelist_mod.o
 
 module_fr_fire_core.o: module_fr_fire_util.o ignition_line_mod.o ros_wrffire_mod.o ../state/state_mod.o
 
